infrastructure/configs/traefik/dashboard-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboards
  namespace: traefik-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-internal.clsn.dev`)
      services:
        - name: api@internal
          kind: TraefikService
          namespace: traefik-internal
    - kind: Rule
      match: Host(`traefik.clsn.dev`)
      services:
        - name: api@internal
          kind: TraefikService
          namespace: traefik-public
